# arrayviz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.yaml  FEATURE_REQUEST.yaml  QUESTION.yaml
.github/workflows/: build_and_release.yaml  lint_and_test.yaml  package_build.yaml
examples/: merge_sorted_arrays.py
src/arrayviz/: __init__.py  animations.py
tests/array_block_visualizer/: test_errors.py  test_function.py  test_unit.py
tests/utils/: __init__.py  functions.py
